--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body{
 background-color: black;  
-color:aliceblue  
+color:aliceblue;
+
+
 }
+
 
 h1{
     text-align: center;
@@ -113,32 +116,33 @@ a, a:hover{
 
 tr{
   display: block;
+   color: black;
 }
 
 .tablazat {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-    background-color: white;
-    color: black;
+  border-collapse: collapse; 
 }
 
-th, td {
-    border: 1px solid #0000;
-    padding: 12px;
-    text-align: left;
+td {
+  width: 150px;
+  height: 200px;
+  border: 1px solid #ddd;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
 }
 
-th {
-    background-color: #4CAF50;
-    color: black;
+td.card:hover {
+  transform: scale(1.05);
 }
 
-tr:nth-child(even) {
-    background-color: #f2f2f2;
+td.empty {
+  border: none;
+  background: none;
 }
 
-tr:hover {
-    background-color: #ddd;
-    color: black;
+.foh1{
+  margin-right: 300px;
 }
